--- a/views/categories-menu.html
+++ b/views/categories-menu.html
@@ -1,1 +1,1 @@
-<li><a href="/categories/3">Blusas</a></li><li><a href="/categories/7">Calças</a></li><li><a href="/categories/5">Saias</a></li><li><a href="/categories/6">Shorts</a></li>
+<li><a href="/categories/3">Blusas</a></li><li><a href="/categories/7">Calças</a></li><li><a href="/categories/5">Saias</a></li><li><a href="/categories/6">Shorts</a></li><li><a href="/categories/8">Vestido</a></li>
