--- a/views/admin/products-create.html
+++ b/views/admin/products-create.html
@@ -34,15 +34,15 @@
               <input type="number" class="form-control" id="vlprice" name="vlprice" step="0.01" placeholder="0.00">
             </div>
             <div class="form-group">
-              <label for="vlwidth">Largura</label>
+              <label for="vlwidth">Largura 10 cm - 105 cm</label>
               <input type="number" class="form-control" id="vlwidth" name="vlwidth" step="0.01" placeholder="0.00">
             </div>
             <div class="form-group">
-              <label for="vlheight">Altura</label>
+              <label for="vlheight">Altura 2 cm - 105 cm</label>
               <input type="number" class="form-control" id="vlheight" name="vlheight" step="0.01" placeholder="0.00">
             </div>
             <div class="form-group">
-              <label for="vllength">Comprimento</label>
+              <label for="vllength">Comprimento 16 cm - 105 cm</label>
               <input type="number" class="form-control" id="vllength" name="vllength" step="0.01" placeholder="0.00">
             </div>
             <div class="form-group">
