--- a/views/admin/products-update.html
+++ b/views/admin/products-update.html
@@ -29,15 +29,15 @@
               <input type="number" class="form-control" id="vlprice" name="vlprice" step="0.01" placeholder="0.00" value="{$product.vlprice}">
             </div>
             <div class="form-group">
-              <label for="vlwidth">Largura</label>
+              <label for="vlwidth">Largura 10 cm - 105 cm</label>
               <input type="number" class="form-control" id="vlwidth" name="vlwidth" step="0.01" placeholder="0.00" value="{$product.vlwidth}">
             </div>
             <div class="form-group">
-              <label for="vlheight">Altura</label>
+              <label for="vlheight">Altura 1 cm - 105 cm</label>
               <input type="number" class="form-control" id="vlheight" name="vlheight" step="0.01" placeholder="0.00" value="{$product.vlheight}">
             </div>
             <div class="form-group">
-              <label for="vllength">Comprimento</label>
+              <label for="vllength">Comprimento 10 cm - 105 cm</label>
               <input type="number" class="form-control" id="vllength" name="vllength" step="0.01" placeholder="0.00" value="{$product.vllength}">
             </div>
             <div class="form-group">
